# HCR-NN-Library

./: .gitignore  Network_HCR_Paper.ipynb  Network_HCR_Paper_v2.ipynb  README.md  hcr_poc.ipynb  lstm.ipynb  neuron_blueprint.ipynb  pyproject.toml  requirements.txt  setup.py
C_kernels/: base_optimization_kernel.cu  conditional_estimation_kernel.cu  dynamic_ema_kernel.cu  entropy_mi_kernel.cu  kernel_setup.py  layers_kernel_bindings.cpp  mean_estimation_kernel.cu  propagation_estimation_kernel.cu  setup.py  test.py
C_kernels/numba/: base_optimization_kernel.py  conditional_estimation_kernel.py  dynamic_ema_kernel.py  entropy_mi_kernel.py  mean_estimation_kernel.py  propagation_estimation_kernel.py
C_kernels/src/: dynamic_ema_kernel.cu  (+6 more)
data/: CDPR_stock_data.csv  OTGLF_stock_data.csv  Stock Data - STOCK_PL_XWAR_CDR.csv  data_fetch.py  toy_bivariate.csv  toy_trivariate.csv
docs/: guide.md
example_implementation/: 01_hcrnn_end_to_end.ipynb
finished_files/: basis.py  layers.py  neuron.py  unit_tests.py
finished_files_R/: layers.r  testing_r.R
finished_files_python/: .coverage  density.py  models.py  unit_tests.py
hcr_nn/: __init__.py  basis.py  density.py  examples.py  hcr_layers.py  layers.py  layers_kernel.py  layers_optimized.py  models.py  neuron.py
hcr_nn_R/: basis_r.r  density_r.r  layers.r  testing_r.R
paper_models/: lstm_mh.pt  saved_weights.pt
poc_stock_market/: Network_HCR_Paper_v2.ipynb  saved_weights.pt  student_mh.pt
tests_python/: test_basis.py  test_basis_density.py  test_density.py  test_layers.py  test_models.py  test_neuron.py
(+56 files in other folders)
